fix test data and add visual spacing

--- a/crt_portal/static/css/map-widget-d3geo.css
+++ b/crt_portal/static/css/map-widget-d3geo.css
@@ -77,10 +77,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-.map-widget__action {
-  margin-bottom: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .map-widget__action-row {
